fix(Drop File): Fix 'Chat -  If you copy paste a invalid image, gets stuck on scanning image' (#309)

--- a/components/tailored/core/fileupload/FileUpload.less
+++ b/components/tailored/core/fileupload/FileUpload.less
@@ -75,6 +75,14 @@
         margin-left: @light-spacing;
       }
     }
+    .nsfw-text {
+      display: flex;
+      align-items: center;
+      margin-top: @light-spacing;
+      h1 {
+        margin: 0 @light-spacing 0 0 !important;
+      }
+    }
   }
 }
 
